--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
